<resources>
    <string name="app_name">모바일 JOY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_song">모든 상황 속에서</string>
    <string name="second_song">주의 약속하신 말씀 위에 서</string>
    <string name="third_song">우리가 꿈꾸는 나라</string>
    <string name="fourth_song">주의 아름다운 성소에서</string>
    <string name="fontTilte"></string>
    <string name="fontText">\@font/poetandme</string>
    <string name="fourth_thumbNail">https://img.youtube.com/vi/aQjrm5vPcMo/0.jpg</string>
    <string name="first_ment">\'보라 하나님은 나의 구원이시라 내가 의뢰하고 두려움이 없으리니 주 여호와는 나의 힘이시며 나의 노래시며 나의 구원이심이라.\' 이사야 12:2\n\n두려움에 대한 근원적이고 온전한 해결책은 하나님을 의뢰하는 것이라고 합니다.\n이사야서에서 이사야는 여호와를 나의 	&lt;힘>이시고, 나의 	&lt;노래>이시며, 나의 	&lt;구원>이시라고 고백하고 있습니다.\n우리 또한, 우리가 어떤 상황에 놓여있든지 깨어 있어 하나님을 예배하고, 이사야와 같이 하나님에 대한 체험적인 고백을 할 수 있게 되기를 소망합니다.</string>
    <string name="second_ment">신천지와 같은 이단이 활발하게 활동하고 있는 시대에 우리는 살아가고 있습니다. 그 가운데서 우리만큼은 하나님의 말씀을 바로 아는 지혜를 갖기를 간절히 소망합니다.\n\n주의 약속하신 말씀 위에서\n영원토록 주를 찬송하리라\n소리 높여 주께 영광 돌리며\n약속 믿고 굳게 서리라\n주의 약속하신 말씀 위에서\n세상 염려 내게 엄습할 때에\n말씀으로 힘써 싸워 이기며\n약속 믿고 굳게 서리라\n성령의 검을 들고\n구원의 투구를 쓰고\n믿음의 방패와 진리의 띠로\n말씀 위에 굳게 서리라\n성령의 검을 들고\n구원의 투구를 쓰고\n곧 하나님의 말씀을 가지라!!!</string>
    <string name="third_ment">&lt;이사야 11장: 이새의 줄기에서 날 싹>을 보면 메시아와 그의 왕국을 예언하고 있음을 볼 수 있습니다.\n\n(6절) 그 때에 이리가 어린 양과 함께 거하며 표범이 어린 염소와 함께 누우며 송아지와 어린 사자와 살찐 짐승이 함께 있어 어린아이에게 끌리며\n(7절) 암소와 곰이 함께 먹으며 그것들의 새끼가 함께 엎드리며 사자가 소처럼 풀을 먹을 것이며\n(8절) 젖 먹는 아이가 독사의 구멍에서 장난하며 젖 뗀 어린아이가 독사의 굴에 손을 넣을 것이라\n(9절) 나의 거룩한 산 모든 곳에서 해 됨도 없고 상함도 없을 것이니 이는 물이 바다를 덮음 같이 여호와를 아는 지식이 세상에 충만할 것임이라\n\n함께 그 나라를 꿈꾸며, 또 우리에게 그 나라를 약속하신 하나님께 감사함으로 찬양하셨으면 좋겠습니다.</string>
    <string name="fourth_ment">하나님을 예배하는 것이 점점 어려워지고 있는 상황이 다가오고 있는 것 같습니다.\n하루 빨리 모든 것이 회복되어서\n그분께 예배 드리는 그 기쁨을 우리가 누릴 수 있으면 좋겠습니다.\n</string>
    <string name="prayerName">대표 기도 임현태</string>
    <string name="prayText">우리의 왕 되신 하나님, 당신의 이름을 높이 올려드립니다. 우리가 지금 코로나 바이러스로 인해 모이지 못하지만 각자의 자리에서 하나님을 바라봅니다. 각자의 자리에서 드리는 찬양과 기도가 향기로운 제사로 주님께 올려지길 소망합니다. 그리고 곧 다시 모여 공동체 됨을 누리고 함께 예배하는 시간이 오길 기대합니다.\n현재 이 땅에서 코로나 바이러스로 인해 많은 이들이 불안에 떨고 있습니다. 병에 걸린 사람들도 걸릴까봐 두려워하는 사람들도 평안할 수 있도록 돌봐주시고 바이러스가 확산되지 못하도록 일하고 있는 사람들에게 도움의 손길을 내려주십시오. 또한 이 바이러스로 인해 많은 이들이 서로 미워하고 탓하고 있습니다. 이 문제를 서로 화합하며 이겨내는 우리들 되게 하여 주십시오.\n이 시간 혜지 간사님이 전하시는 메시지가 우리에게 살아 역사하시는 당신의 말씀으로 우리가 받아들이게 하시고 그 말씀이 우리가 예수님을 닮는 삶을 사는 원동력이 되게 하여 주세요. 우리를 구원하신 사랑이신 예수님의 이름으로 기도드립니다. 아멘.</string>
    <string name="bibleTitle">요한복음 15장 8-17절</string>
    <string name="bibleText">8 너희가 열매를 많이 맺으면 내 아버지께서 영광을 받으실 것이요 너희는 내 제자가 되리라 9 아버지께서 나를 사랑하신 것 같이 나도 너희를 사랑하였으니 나의 사랑 안에 거하 라 10 내가 아버지의 계명을 지켜 그의 사랑 안에 거하는 것 같이 너희도 내 계명을 지키 면 내 사랑 안에 거하리라 11 내가 이것을 너희에게 이름은 내 기쁨이 너희 안에 있어 너희 기쁨을 충만하게 하 려 함이라 12 내 계명은 곧 내가 너희를 사랑한 것 같이 너희도 서로 사랑하라 하는 이것이니라 13 사람이 친구를 위하여 자기 목숨을 버리면 이보다 더 큰 사랑이 없나니 14 너희는 내가 명하는 대로 행하면 곧 나의 친구라 15 이제부터는 너희를 종이라 하지 아니하리니 종은 주인이 하는 것을 알지 못함이라 너희를 친구라 하였노니 내가 내 아버지께 들은 것을 다 너희에게 알게 하였음이라 16 너희가 나를 택한 것이 아니요 내가 너희를 택하여 세웠나니 이는 너희로 가서 열 매를 맺게 하고 또 너희 열매가 항상 있게 하여 내 이름으로 아버지께 무엇을 구하든 지 다 받게 하려 함이라 17 내가 이것을 너희에게 명함은 너희로 서로 사랑하게 하려 함이라</string>
    <string name="messengerName">안혜지 간사님</string>
</resources>