<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HymnFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/hymn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/thumbNail1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="-24dp"
                    android:src="@drawable/image1"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/thumbNail1"
                    android:layout_marginLeft="8dp"
                    android:text="@string/first_song"
                    android:textSize="16sp"
                    android:textStyle="bold" />

<!--                <ImageButton-->
<!--                    android:id="@+id/playButton1"-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_toRightOf="@+id/thumbNail1"-->
<!--                    android:layout_marginLeft="8dp"-->
<!--                    android:layout_below="@+id/textTitle1"-->
<!--                    android:src="@drawable/ic_bible" />-->

                <Button
                    android:id="@+id/playButton1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/textTitle1"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/thumbNail1"
                     />

                <Button
                    android:id="@+id/stopButton1"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="4dp"
                    android:layout_below="@+id/textTitle1"
                    android:layout_toRightOf="@+id/playButton1" />

                <TextView
                    app:fontFamily="@font/poetandme"
                    android:fontFamily="@string/fontText"

                    android:id="@+id/textMent1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbNail1"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingExtra="8sp"

                    android:text="@string/first_ment" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/hymn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/thumbNail2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="-24dp"
                    android:src="@drawable/image2"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/thumbNail2"
                    android:layout_marginLeft="8dp"
                    android:text="@string/second_song"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/playButton2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/textTitle2"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/thumbNail2" />

                <Button
                    android:id="@+id/stopButton2"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/textTitle2"
                    android:layout_toRightOf="@+id/playButton2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textMent2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbNail2"
                    android:layout_marginBottom="8dp"
                    app:fontFamily="@font/poetandme"
                    android:fontFamily="@string/fontText"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/second_ment" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/hymn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/thumbNail3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="-24dp"
                    android:src="@drawable/image3"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/thumbNail3"
                    android:layout_marginLeft="8dp"
                    android:text="@string/third_song"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/playButton3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/textTitle3"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/thumbNail3" />

                <Button
                    android:id="@+id/stopButton3"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/textTitle3"
                    android:layout_toRightOf="@+id/playButton3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textMent3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbNail3"
                    android:layout_marginBottom="8dp"
                    app:fontFamily="@font/poetandme"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/third_ment" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/hymn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/thumbNail4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="-24dp"
                    android:src="@drawable/image4"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTitle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/thumbNail4"
                    android:layout_marginLeft="8dp"
                    android:text="@string/fourth_song"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/playButton4"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/textTitle4"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/thumbNail4" />
                <Button
                    android:id="@+id/stopButton4"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"
                    android:layout_below="@+id/textTitle4"
                    android:layout_toRightOf="@+id/playButton4"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textMent4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbNail4"
                    android:layout_marginBottom="8dp"
                    app:fontFamily="@font/poetandme"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/fourth_ment" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>





</FrameLayout>